--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="rainOverlay">#82444444</color>
+    <color name="snowOverlay">#64cccccc</color>
+    <color name="sunOverlay">#00000000</color>
 </resources>
