--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.booboot.sakuramemories.activity.SakuraActivity">
+    tools:context="com.booboot.sakuramemories.activity.MainActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
