--- a/app/src/main/res/layout/memories_fragment.xml
+++ b/app/src/main/res/layout/memories_fragment.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="MEMORIES FRAGMENT"
         android:textAlignment="center"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:textSize="25sp"/>
-</LinearLayout>
+</RelativeLayout>
