--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorAccentLight">#DCEDC8</color>
     <color name="colorAccent">#AED581</color>
     <color name="colorAccentDark">#8BC34A</color>
+    <color name="colorAccentVeryDark">#689F38</color>
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
