--- a/app/src/main/res/layout/sakura_fragment.xml
+++ b/app/src/main/res/layout/sakura_fragment.xml
@@ -32,6 +32,7 @@
         android:padding="15dp">
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/weatherButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
