--- a/app/src/main/res/layout/memories_fragment.xml
+++ b/app/src/main/res/layout/memories_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,11 +10,55 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|start"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="10dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/item_sakura"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="345"
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_gravity="top|end"
+        android:clipToPadding="false"
+        android:padding="15dp">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/shopButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:clickable="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_shopping_basket_36dp"
+            app:backgroundTint="@color/white"
+            app:borderWidth="0dp"
+            app:rippleColor="@color/colorPrimary"/>
+    </FrameLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="MEMORIES FRAGMENT"
         android:textAlignment="center"
-        android:layout_centerInParent="true"
         android:textSize="25sp"/>
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
