--- a/app/src/main/res/layout/memories_fragment.xml
+++ b/app/src/main/res/layout/memories_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -13,7 +13,6 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|start"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:gravity="center"
         android:orientation="horizontal">
@@ -35,9 +34,10 @@
     </LinearLayout>
 
     <FrameLayout
+        android:id="@+id/shopButtonLayout"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_gravity="top|end"
+        android:layout_alignParentEnd="true"
         android:clipToPadding="false"
         android:padding="15dp">
 
@@ -47,18 +47,19 @@
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:clickable="true"
-            android:scaleType="centerCrop"
+            android:scaleType="centerInside"
             android:src="@drawable/ic_shopping_basket_36dp"
             app:backgroundTint="@color/white"
             app:borderWidth="0dp"
             app:rippleColor="@color/colorPrimary"/>
     </FrameLayout>
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/garden"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="MEMORIES FRAGMENT"
-        android:textAlignment="center"
-        android:textSize="25sp"/>
-</android.support.design.widget.CoordinatorLayout>
+        android:layout_height="match_parent"
+        android:layout_below="@id/shopButtonLayout"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"/>
+
+</RelativeLayout>
