[+] renderScript lib. [+] Clicking on a flower opens a full-width modal with a dark blurred version of the flower as the background.

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -22,9 +22,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
+        app:elevation="20dp"
         android:background="@color/colorAccentLightTransparent"
-        android:elevation="30dp"
         app:itemIconTint="@drawable/navigation_item_color"
         app:itemTextColor="@drawable/navigation_item_color"
         app:menu="@menu/navigation"/>
+
+    <include layout="@layout/screen_loading"/>
 </RelativeLayout>
