--- a/app/src/main/res/layout/memories_fragment.xml
+++ b/app/src/main/res/layout/memories_fragment.xml
@@ -11,18 +11,27 @@
         android:scaleType="centerCrop"/>
 
     <LinearLayout
+        android:id="@+id/test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:gravity="center"
         android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginEnd="10dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/item_sakura"/>
+            android:adjustViewBounds="true"
+            android:clickable="true"
+            android:scaleType="centerInside"
+            android:src="@drawable/petal"
+            app:backgroundTint="@color/white"
+            app:borderWidth="0dp"
+            app:elevation="0dp"
+            app:fabSize="mini"
+            app:rippleColor="@color/colorPrimary"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,11 +44,16 @@
 
     <FrameLayout
         android:id="@+id/shopButtonLayout"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
         android:clipToPadding="false"
-        android:padding="15dp">
+        android:paddingBottom="5dp"
+        android:paddingEnd="5dp"
+        android:paddingStart="5dp"
+        android:paddingTop="5dp">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/shopButton"
